# sol-fund

./: .gitignore  LICENSE  README.md  config-overrides.js  idl (3).json  package-lock.json  package.json  tsconfig.json  webpack.config.js
backend/: Anchor.toml
backend/programs/solfund/: Cargo.toml
backend/programs/solfund/src/: lib.rs
backend/tests/: solfund.ts
public/: index.html
public/font/: example.html
src/: App.tsx  WalletProvider.tsx  idl.json  index.css  index.jsx  index.tsx  theme.jsx  theme.tsx
src/Context/: index.jsx  index.tsx
src/components/Campaign/: Details.jsx  Details.tsx  index.tsx
src/components/Footer/: index.tsx
src/components/LandingPage/: ConnectWallet.tsx  index.tsx
src/components/Message/: Message.tsx
src/components/Navbar/: Nav2.tsx  index.tsx
src/components/Onboarding/: Onboarding1.jsx  Onboarding1.tsx  Onboarding2.jsx  Onboarding2.tsx  Onboarding3.jsx  Onboarding3.tsx
src/components/Profile/: index.jsx  index.tsx
src/components/SideNav/: HalfSide.tsx  index.tsx
src/components/functions/: index.ts
src/function/: WalletConnectProvider.jsx  index.js
src/pages/: LandingPage.jsx  Message.tsx  Profile.jsx  Profile.tsx  ProtectedPages.tsx  style.css
src/redux/: store.ts  types.ts
src/redux/slice/: CampaignSlice.ts  RecepientSlice.ts  TransactionSlice.ts
