[package]
name = "solfund"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solfund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
ahash = "0.8.6"
anchor-spl = "0.28.0"
borsh-derive = "0.10.0"
solana-program = "1.16.14"

