[package]
name = "solfund"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solfund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
ahash = "0.8.6"
anchor-spl = { version = "0.28.0", features = ["metadata"] }
borsh-derive = "0.10.0"
solana-program = "1.16.14"
mpl-token-metadata = "4.1.1"

